--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,18 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body
-    p Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur veniam explicabo ipsa nam reprehenderit nulla sit? Ullam, amet. Quam amet inventore, rerum porro veritatis expedita ea natus repellendus unde! Laudantium.
+extends ./layouts/main
+
+block content 
+  h1 Lorem, ipsum.
+  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nisi ut, magni similique sed, explicabo debitis iure quidem velit nihil blanditiis. Voluptatem natus, quo aut in amet quos eum voluptates.
+  blockquote Lorem ipsum dolor sit amet.
+  ul
+    li Lorem ipsum dolor sit amet.55 
+    li Obcaecati dolorem veritatis accusantium saepe.
+    li Sapiente eius eum fugiat enim?
+    li Impedit animi magni tenetur earum!
+    li Excepturi quas doloribus animi? Molestias!
+  button.mui-btn.mui-btn--primary Lorem, ipsum.
+  em Lorem ipsum dolor sit amet.
+  
+
+  h2 Lorem, ipsum dolor.
+  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint consectetur ut ex?
