--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -6,7 +6,7 @@ html(lang="ar" dir="rtl")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title Kalami
     link(href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css")
-    script(src=src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js") 
+    script(src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js")
   body
     #sidebar
       .mui--text-light.mui--text-display1.mui--align-vertical SAMPLE BLOG
