--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,5 @@
 extends ./layouts/main
 
 block content 
+  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Est explicabo sapiente quis perferendis deleniti omnis a accusamus! Velit quis distinctio officiis. Eligendi ad dolorem, nostrum odio accusantium quod eum ut.
   
