--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -7,11 +7,10 @@ html(lang="en" dir="ltr")
     title Kalami
     link(href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css")
     //- link(href="bower_components/mui/src/sass/mui/colors" rel="stylesheet" type="text/css")
-    <link href="//cdn.muicss.com/mui-0.10.3/extra/mui-noglobals.min.css" rel="stylesheet" type="text/css" />
-    <link href="//cdn.muicss.com/mui-0.10.3/extra/mui-colors.min.css" rel="stylesheet" type="text/css" />
-    link(rel="stylesheet" href="../styles/index.scss")
-    script(src=src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js") 
-    <script src="//cdn.muicss.com/mui-0.10.3/extra/mui-combined.min.js"></script>
+    //- link(href="//cdn.muicss.com/mui-0.10.3/extra/mui-colors.min.css" rel="stylesheet" type="text/css")
+    //- link(rel="stylesheet" href="../styles/index.scss")
+    script(src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js") 
+    //- script(src="//cdn.muicss.com/mui-0.10.3/extra/mui-combined.min.js")
   body
     #sidebar
       .mui--text-light.mui--text-display1.mui--align-vertical SAMPLE BLOG
