--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,19 @@
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/Inter.ttf');
-}
+// @font-face {
+//   font-family: 'Inter';
+//   src: url('../fonts/Inter.ttf');
+// }
 
-@import 'variables';
-@import 'scaffolding';
-@import "@muicss/dist/css/mui.min.css";
-// @import "bower_components/mui/src/sass/mui/colors";
+// @import 'variables';
+// @import 'scaffolding';
+// @import "@muicss/dist/css/mui.min.css";
+
+body {
+  background-color: red;
+}
 
 /**
  * Header CSS
- */
+ 
 header {
   position: fixed;
   top: 0;
@@ -34,24 +37,24 @@ header table {
 
 /**
  * Content CSS
- */
-#content-wrapper {
-  min-height: 100%;
+//  */
+// #content-wrapper {
+//   min-height: 100%;
 
-  /* sticky footer */
-  box-sizing: border-box;
-  margin-bottom: -100px;
-  padding-bottom: 100px;
-}
+//   /* sticky footer */
+//   box-sizing: border-box;
+//   margin-bottom: -100px;
+//   padding-bottom: 100px;
+// }
 
 
 /**
  * Footer CSS
  */
-footer {
-  box-sizing: border-box;
-  height: 100px;
-  background-color: #eee;
-  border-top: 1px solid #e0e0e0;
-  padding-top: 35px;
-}
+// footer {
+//   box-sizing: border-box;
+//   height: 100px;
+//   background-color: #eee;
+//   border-top: 1px solid #e0e0e0;
+//   padding-top: 35px;
+// }
