--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,1 @@
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/Inter.ttf');
-}
-
-@import 'variables';
-@import 'scaffolding';
-@import "@muicss/dist/css/mui.min.css";
+@import "~muicss/dist/css/mui.min.css";
