layout - left sidebar

--- a/src/partials/footer.pug
+++ b/src/partials/footer.pug
@@ -1,3 +1,5 @@
-.footer.mui-container.mui--text-center
-    | Made with &hearts; by
-    a(href='https://www.muicss.com') Fritill
+
+.footer.mui--text-center
+  .footer-content
+    | Made with &hearts; by 
+    a(href='https://fritill.com/') Fritill
