--- a/src/partials/left-sidebar.pug
+++ b/src/partials/left-sidebar.pug
@@ -1,2 +1,20 @@
-.content-left-sidebar
-    | left side bar
+#sidedrawer.mui--no-user-select
+  #sidedrawer-brand.mui--appbar-line-height
+  .username.mui--text-title username
+  .mui-divider
+     ul
+      li
+       a(href='#') Account
+      li
+       a(href='#') Language
+      li
+       a(href='#') notifications
+
+header#header
+  .mui-appbar.mui--appbar-line-height
+    .mui-container-fluid
+      a.sidedrawer-toggle.mui--visible-xs-inline-block.mui--visible-sm-inline-block.js-show-sidedrawer &#x2630;
+      a.sidedrawer-toggle.mui--hidden-xs.mui--hidden-sm.js-hide-sidedrawer &#x2630;
+      span.mui--text-title.mui--visible-xs-inline-block kalami
+//- #content-wrapper
+//-   | content
