--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,121 @@
 html[dir=rtl] {
   @import "~muicss/dist/css/mui-rtl.min.css";
 }
+
+body {
+  height: 100%;
+}
+
+.footer {
+  box-sizing: border-box;
+  height: 15vh;
+  background-color: #eee;
+  border-top: 1px solid #e0e0e0;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+}
+// ///////////////left side bar//////////////////////
+#header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  transition: left 0.2s;
+}
+
+#sidedrawer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 200px;
+  left: -200px;
+  overflow: auto;
+  z-index: 2;
+  background-color: #fff;
+  transition: transform 0.2s;
+  text-align: center;
+
+  #sidedrawer-brand{
+    padding-left: 20px;
+  }
+  ul {
+    list-style: none;
+    padding: 8px 0;
+    margin-top: 12px;
+    li{
+      margin: 10px;
+    }
+  }
+
+  .username{
+    padding-top: 11px;
+  }
+}
+
+#content-wrapper {
+  min-height: 100%;
+  overflow-x: hidden;
+  margin-left: 0px;
+  transition: margin-left 0.2s;
+}
+
+#footer {
+  height: 160px;
+  margin-left: 0px;
+  transition: margin-left 0.2s;
+}
+
+@media (min-width: 768px) {
+  #header {
+    left: 200px;
+  }
+
+  #sidedrawer {
+    transform: translate(200px);
+  }
+
+  #content-wrapper {
+    margin-left: 200px;
+  }
+
+  body.hide-sidedrawer #header {
+    left: 0;
+  }
+
+  body.hide-sidedrawer #sidedrawer {
+    transform: translate(0px);
+  }
+
+  body.hide-sidedrawer #content-wrapper {
+    margin-left: 0;
+  }
+
+}
+/**
+ * Toggle Side drawer
+ */
+#sidedrawer.active {
+  transform: translate(200px);
+}
+
+.sidedrawer-toggle {
+  color: #fff;
+  cursor: pointer;
+  font-size: 20px;
+  line-height: 20px;
+  margin-right: 10px;
+}
+
+.sidedrawer-toggle:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+// ///////////////////////////////////
