--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,12 +23,20 @@ body {
   align-items: center;
   z-index: 5;
 }
-// ///////////////left side bar//////////////////////
+
 #header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  z-index: 2;
+  transition: left 0.2s;
+}
+
+#header-right {
+  position: fixed;
+  top: 0;
+  right: 0;
   z-index: 2;
   transition: left 0.2s;
 }
@@ -45,32 +53,53 @@ body {
   transition: transform 0.2s;
   text-align: center;
 
-  #sidedrawer-brand{
+  #sidedrawer-brand {
     padding-left: 20px;
   }
+
   ul {
     list-style: none;
     padding: 8px 0;
     margin-top: 12px;
-    li{
+
+    li {
       margin: 10px;
     }
   }
 
-  .username{
+  .username {
     padding-top: 11px;
+  }
+}
+
+#sidedrawer-right {
+  position: fixed;
+  top: 64px;
+  right: 0px;
+  bottom: 0;
+  width: 216px;
+  // left: -200px;
+  overflow: auto;
+  z-index: 2;
+  background-color: #fff;
+  transition: transform 0.2s;
+  text-align: center;
+  background-color: #f0ebebed;
+
+  ul {
+    list-style: none;
+    padding: 8px 0;
+    margin-top: 12px;
+
+    li {
+      margin: 10px;
+    }
   }
 }
 
 #content-wrapper {
   min-height: 100%;
   overflow-x: hidden;
-  margin-left: 0px;
-  transition: margin-left 0.2s;
-}
-
-#footer {
-  height: 160px;
   margin-left: 0px;
   transition: margin-left 0.2s;
 }
@@ -99,8 +128,8 @@ body {
   body.hide-sidedrawer #content-wrapper {
     margin-left: 0;
   }
-
 }
+
 /**
  * Toggle Side drawer
  */
@@ -116,9 +145,11 @@ body {
   margin-right: 10px;
 }
 
+.topic-image {
+  margin: 50px;
+}
+
 .sidedrawer-toggle:hover {
   color: #fff;
   text-decoration: none;
 }
-
-// ///////////////////////////////////
