--- a/src/partials/right-sidebar.pug
+++ b/src/partials/right-sidebar.pug
@@ -10,6 +10,13 @@
        a(href='#') Description
       li
        a(href='#') Description
+      li
+       a(href='#') Description
+      li
+       a(href='#') Description
+      li
+       a(href='#') Description
+      
 
 #header-right
   .mui-appbar.mui--appbar-line-height
