--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -5,7 +5,6 @@ html(lang="en" dir="ltr")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title Kalami
-    script(src='https://code.jquery.com/jquery-3.1.0.min.js')
     
   body
     header.mui-appbar.mui--z1
@@ -20,42 +19,4 @@ html(lang="en" dir="ltr")
       .main
         .content-main.mui--text-center
           block content
-        include ../partials/right-sidebar
-
-
-    include ../partials/footer
-
-    script.
-     jQuery(function ($) {
-     $bodyEl = $('body'),
-     $sidedrawerEl = $('#sidedrawer');
-     function showSidedrawer() {
-     // show overlay
-     var options = {
-     onclose: function () {
-     $sidedrawerEl
-     .removeClass('active')
-     .appendTo(document.body);
-     }
-      };
-      var $overlayEl = $(mui.overlay('on', options));
-      // show element
-      $sidedrawerEl.appendTo($overlayEl);
-      setTimeout(function () {
-      $sidedrawerEl.addClass('active');
-      }, 20);
-      }
-      function hideSidedrawer() {
-      $bodyEl.toggleClass('hide-sidedrawer');
-      }
-      $('.js-show-sidedrawer').on('click', showSidedrawer);
-      $('.js-hide-sidedrawer').on('click', hideSidedrawer);
-      });
-    script.
-    //-  var $titleEls = $('strong', $sidedrawerEl);
-    //-  $titleEls
-    //-  .next()
-    //-  .hide();
-    //-  $titleEls.on('click', function() {
-    //-  $(this).next().slideToggle(200);
-     });
+        //- include ../partials/right-sidebar
