--- a/src/views/packs.pug
+++ b/src/views/packs.pug
@@ -1,4 +1,6 @@
 extends ./layouts/main
+include ./mixins/pack-card
 
 block content 
-    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptatum asperiores quam eius qui doloribus, repudiandae neque saepe sint. Quod cum dicta corporis obcaecati cumque, natus impedit dolore animi est.
+  .pack-card-container 
+    +pack-card 
