--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -1,22 +1,23 @@
 doctype html
 html(lang="en" dir="ltr")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    title Kalami
-    
-  body
-    header.mui-appbar.mui--z1
-      .mui-container
-        .mui--appbar-height
-          .mui--text-title.title Kalami
+	head
+		meta(charset="UTF-8")
+		meta(http-equiv="X-UA-Compatible" content="IE=edge")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+		title Kalami
+		
+	body
+		header.mui-appbar.mui--z1
+			.mui-container
+				.mui--appbar-height
+					.mui--text-title.title Kalami
 					
 
-    #content-wrapper.container
-      include ../partials/left-sidebar
+		#content-wrapper.container
+			include ../partials/left-sidebar
 
-      .main
-        .content-main.mui--text-center
-          block content
-        //- include ../partials/right-sidebar
+			.main
+				.content-main.mui--text-center
+					block content
+				//- include ../partials/right-sidebar
