--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,13 +1,7 @@
 extends layouts/main
 
 block content 
-	.mui--appbar-height
-	br
-	br
-	.mui--text-display3.row.wow.zoomInDown Content
-	br
-	br
-	button.mui-btn.mui-btn--raised Get started
-	br
-	br
-	i.fa.fa-university.fa-5x.mui--text-display3.mui--color-pink-A100.row.wow.zoomIn(aria-hidden='true')
+    .search-bar
+      input(type='text' placeholder='Search here..')
+    span.material-icons
+    | search
