--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -17,6 +17,6 @@ html(lang="en" dir="ltr")
       include ../partials/left-sidebar
 
       .main
-        .content-main.mui--text-center
+        .content-main
           block content
         //- include ../partials/right-sidebar
