--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 html[dir=rtl] {
   @import "~muicss/dist/css/mui-rtl.min.css";
 }
+
 @import '@/styles/components/pack-card.scss';
 
 body {
@@ -104,15 +105,19 @@ body {
   margin-left: 0px;
   transition: margin-left 0.2s;
 }
-.main{
+
+.main {
   // flex: 1;
   // display: flex;
   // justify-content: space-between;
 }
-.content-main{
+
+.content-main {
   // background-color: #c6c2c2;
   padding-right: 214px;
+  width: 100%;
 }
+
 @media (min-width: 768px) {
   #header {
     left: 200px;
@@ -161,4 +166,21 @@ body {
 .sidedrawer-toggle:hover {
   color: #fff;
   text-decoration: none;
+}
+
+
+
+// search-bar
+
+.search-bar {
+  background-color: #f5e8e8;
+  height: 58px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  input {
+    height: 25px;
+    padding-left: 4px;
+  }
 }
