--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -8,16 +8,16 @@ html(lang="en" dir="ltr")
 		title Kalami
 		
 	body
-		header.mui-appbar.mui--z1
-			.mui-container
-				.mui--appbar-height
-					.mui--text-title.title Kalami
+		//- header.mui-appbar.mui--z1
+		//- 	.mui-container
+		//- 		.mui--appbar-height
+		//- 			.mui--text-title.title Kalami
 					
 
 		#content-wrapper.container
 			include ../partials/left-sidebar
 
-      .main
-        .content-main
-          block content
-        //- include ../partials/right-sidebar
+		.main#content-wrapper.container
+				.content-main
+					block content
+				//- include ../partials/right-sidebar
