--- a/src/styles/components/pack-card.scss
+++ b/src/styles/components/pack-card.scss
@@ -9,16 +9,28 @@
   justify-content: space-around;
   align-items: center;
   padding: 11px 0;
+  // margin-top: 85px;
+  margin: 130px 0 0px 20px;
+
+
 
 }
 
 img {
   width: 50%;
-  height: 46%;
+  height: 50%; 
   border-radius: 50%;
-  margin-bottom: 13px;
+  margin-bottom: 8px; 
 }
 
 .pack-card-description {
   font-size: 16px;
+
+  .pack-card-title {
+    font-weight: 700;
+  }
+
+  .pack-card-subtitle {
+    font-weight: 400;
+  }
 }
