--- a/src/views/partials/left-sidebar.pug
+++ b/src/views/partials/left-sidebar.pug
@@ -1,20 +1,52 @@
 #sidedrawer.mui--no-user-select
-  #sidedrawer-brand.mui--appbar-line-height
-  .username.mui--text-title username
-  .mui-divider
-     ul
-      li
-       a(href='#') Account
-      li
-       a(href='#') Language
-      li
-       a(href='#') notifications
+	#sidedrawer-brand.mui--appbar-line-height
+	.username.mui--text-title logo
+		//- img(src='./images/logo.png' alt='logo')
+	.mui-divider
+		ul
+			li
+				a(href='#')
+					span.material-icons
+						|account_circle
+					|My account
+			li
+				a(href='#') 
+					span.material-icons
+						|language
+					|language
+			li
+				a(href='#')
+					span.material-icons
+						|subscriptions
+					|subscriptions
+			li
+				a(href='#')
+					span.material-icons
+						|attach_money
+					|plans
+			li
+				a(href='#')
+					span.material-icons
+						|send
+					|feedbak
+			li
+				a(href='#')
+					span.material-icons
+						|description
+					|about
+			li
+				a(href='#')
+					//- img(src='../../images/apple-store.png' alt='apple store')
+					| apple store
+			
+			li
+				a(href='#')
+					//- img(src='../../images/google-play.png' alt='google play')
+					| google play
 
 header#header
-  .mui-appbar.mui--appbar-line-height
-    .mui-container-fluid
-      a.sidedrawer-toggle.mui--visible-xs-inline-block.mui--visible-sm-inline-block.js-show-sidedrawer &#x2630;
-      a.sidedrawer-toggle.mui--hidden-xs.mui--hidden-sm.js-hide-sidedrawer &#x2630;
-      span.mui--text-title.mui--visible-xs-inline-block kalami
-//- #content-wrapper
-//-   | content
+	.mui-appbar.mui--appbar-line-height
+		.mui-container-fluid
+			a.sidedrawer-toggle.mui--visible-xs-inline-block.mui--visible-sm-inline-block.js-show-sidedrawer &#x2630;
+			a.sidedrawer-toggle.mui--hidden-xs.mui--hidden-sm.js-hide-sidedrawer &#x2630;
+			span.mui--text-title.mui--visible-xs-inline-block kalami
