--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -224,7 +224,29 @@ body {
     justify-content: center;
     height: 451px;
 
-    li {}
+    li {
+      margin: 10px;
+      border-bottom: 1px solid #e4dede;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      padding-bottom: 8px;
+
+
+      a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &:hover{
+          text-decoration: none;
+        }
+        span{
+          margin: 4px;
+        }
+      }
+    }
   }
 }
 
