--- a/src/views/mixins/pack-card.pug
+++ b/src/views/mixins/pack-card.pug
@@ -1,5 +1,4 @@
 mixin pack-card
-	img.pack-image(src='../images/girl.png' alt='image')
-	.pack-card-description 
-		.pack-card-title Sister
-		.pack-card-subtitle Family
+	a(href='#' class="pack-card")
+		img(src='../images/girl.png' alt='image' class="pack-card__image")
+		.pack-card__title Sister
