--- a/src/styles/components/pack-card.scss
+++ b/src/styles/components/pack-card.scss
@@ -1,7 +1,6 @@
-.pack-card-container {
-  // border: 1px solid #e3dcdc;
+.pack-card {
   border-radius: 18px;
-  background-color: #f1f6f0;
+  // background-color: #f1f6f0;
   margin: 20px;
   width: 138px;
   display: flex;
@@ -9,39 +8,45 @@
   justify-content: space-around;
   align-items: center;
   padding: 11px 0;
-  // position: relative;
-  // margin-top: 85px;
   margin: 130px 0 0px 20px;
-  // animation: card-animation 5s ;
+  position: relative;
+  transition: transform .7s;
+
+  &:before {
+    content: '';
+    display: block;
+    pointer-events: none;
+    border-radius: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    color: inherit;
+    background-color: currentColor;
+    transition: opacity .2s cubic-bezier(.4, 0, .6, 1);
+  }
+  &:hover, &:active {
+    &:before {
+      opacity: 0.24;
+    }
+    text-decoration: none;
+    transform: scale(0.9);
+    box-shadow: 2px 0px 10px 0px rgb(0 0 0 / 50%);
+    // scale: ;
+    // transition: transform 20s;
+
+  }
 }
-// @keyframes card-animation {
-// }
 
-// .pack-card-container:active{
-//   width: 117px;
-//   border: none;
-//   transition: 0.7s;
-//   margin: 153px 0 0px 29px;
-// }
-
-// .overlay{
-//   background-color: currentColor;
-//   position: absolute;
-// }
-img {
+.pack-card__image {
   width: 50%;
   height: 50%; 
-  border-radius: 50%;
+  // border-radius: 50%;
   margin-bottom: 8px; 
 }
-
-.pack-card-description {
-  font-size: 16px;
-}
-  .pack-card-title {
-    font-weight: 700;
-  }
-
-  .pack-card-subtitle {
-    font-weight: 400;
+  .pack-card__title {
+    font-weight: 600;
+    font-size: 16px;
   }
