--- a/src/styles/components/pack-card.scss
+++ b/src/styles/components/pack-card.scss
@@ -8,9 +8,9 @@
   justify-content: space-around;
   align-items: center;
   padding: 11px 0;
-  margin: 130px 0 0px 20px;
   position: relative;
   transition: transform .7s;
+  text-decoration: none;
 
   &:before {
     content: '';
@@ -34,9 +34,6 @@
     text-decoration: none;
     transform: scale(0.9);
     box-shadow: 2px 0px 10px 0px rgb(0 0 0 / 50%);
-    // scale: ;
-    // transition: transform 20s;
-
   }
 }
 
