--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,140 +38,193 @@ body {
   transition: left 0.2s;
 }
 
-#sidedrawer {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 200px;
-  left: -200px;
-  overflow: auto;
-  z-index: 2;
-  background-color: #f7f8f9;
-  transition: transform 0.2s;
-  text-align: center;
-
-  #sidedrawer-brand {
-    padding-left: 20px;
-  }
-
-  ul {
-    list-style: none;
-    padding: 8px 0;
-    margin-top: 12px;
-
-    li {
-      margin: 10px;
-    }
-  }
-
-  .username {
-    padding-top: 11px;
+.mdl-layout__drawer {
+  img {
+    width: 90%;
   }
 }
 
-#sidedrawer-right {
-  position: fixed;
-  top: 64px;
-  right: 0px;
-  bottom: 0;
-  width: 216px;
-  // left: -200px;
-  overflow: auto;
-  z-index: 10;
-  background-color: #fff;
-  transition: transform 0.2s;
-  text-align: center;
-  background-color: #f0ebebed;
-
-  ul {
-    list-style: none;
-    padding: 8px 0;
-    margin-top: 12px;
-
-    li {
-      margin: 10px;
-    }
-  }
+.mdl-list__item {
+  justify-content: center;
+  cursor: pointer;
 }
 
-#content-wrapper {
-  min-height: 100%;
-  overflow-x: hidden;
-  margin-left: 0px;
-  transition: margin-left 0.2s;
-}
+// ////////////////////////
 
-.content-main {
-  // background-color: #c6c2c2;
-  padding-right: 214px;
-  width: 100%;
+.copy-right {
   display: flex;
   flex-direction: column;
-}
+  justify-content: center;
+  list-style: none;
+  padding: 10px;
 
-@media (min-width: 768px) {
-  #header {
-    left: 200px;
+  a {
+    text-decoration: none;
+    color: #706f6f;
+    margin-bottom: 7px;
+
   }
 
-  #sidedrawer {
-    transform: translate(200px);
-  }
-
-  #content-wrapper {
-    margin-left: 197px;
-  }
-
-  body.hide-sidedrawer #header {
-    left: 0;
-  }
-
-  body.hide-sidedrawer #sidedrawer {
-    transform: translate(0px);
-  }
-
-  body.hide-sidedrawer #content-wrapper {
-    margin-left: 0;
+  p {
+    margin: 0;
+    text-align: center;
   }
 }
 
-/**
- * Toggle Side drawer
- */
-#sidedrawer.active {
-  transform: translate(200px);
+.fritill {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    margin: 0;
+  }
+
+  .fritill-logo {
+    display: flex;
+    justify-content: center;
+
+    .fritill-logo-image {
+      width: 50%;
+    }
+  }
 }
 
-.sidedrawer-toggle {
-  color: #fff;
-  cursor: pointer;
-  font-size: 20px;
-  line-height: 20px;
-  margin-right: 10px;
-}
+// #sidedrawer {
+//   position: fixed;
+//   top: 0;
+//   bottom: 0;
+//   width: 200px;
+//   left: -200px;
+//   overflow: auto;
+//   z-index: 2;
+//   background-color: #f7f8f9;
+//   transition: transform 0.2s;
+//   text-align: center;
 
-.topic-image {
-  margin: 50px;
-}
+//   #sidedrawer-brand {
+//     padding-left: 20px;
+//   }
 
-.sidedrawer-toggle:hover {
-  color: #fff;
-  text-decoration: none;
-}
+//   ul {
+//     list-style: none;
+//     padding: 8px 0;
+//     margin-top: 12px;
 
-#sidedrawer .username {
-  height: 50px;
-  padding-top: 0;
-}
+//     li {
+//       margin: 10px;
+//     }
+//   }
+
+//   .username {
+//     padding-top: 11px;
+//   }
+// }
+
+// #sidedrawer-right {
+//   position: fixed;
+//   top: 64px;
+//   right: 0px;
+//   bottom: 0;
+//   width: 216px;
+//   // left: -200px;
+//   overflow: auto;
+//   z-index: 10;
+//   background-color: #fff;
+//   transition: transform 0.2s;
+//   text-align: center;
+//   background-color: #f0ebebed;
+
+//   ul {
+//     list-style: none;
+//     padding: 8px 0;
+//     margin-top: 12px;
+
+//     li {
+//       margin: 10px;
+//     }
+//   }
+// }
+
+// #content-wrapper {
+//   min-height: 100%;
+//   overflow-x: hidden;
+//   margin-left: 0px;
+//   transition: margin-left 0.2s;
+// }
+
+// .content-main {
+//   // background-color: #c6c2c2;
+//   padding-right: 214px;
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// @media (min-width: 768px) {
+//   #header {
+//     left: 200px;
+//   }
+
+//   #sidedrawer {
+//     transform: translate(200px);
+//   }
+
+//   #content-wrapper {
+//     margin-left: 197px;
+//   }
+
+//   body.hide-sidedrawer #header {
+//     left: 0;
+//   }
+
+//   body.hide-sidedrawer #sidedrawer {
+//     transform: translate(0px);
+//   }
+
+//   body.hide-sidedrawer #content-wrapper {
+//     margin-left: 0;
+//   }
+// }
+
+// /**
+//  * Toggle Side drawer
+//  */
+// #sidedrawer.active {
+//   transform: translate(200px);
+// }
+
+// .sidedrawer-toggle {
+//   color: #fff;
+//   cursor: pointer;
+//   font-size: 20px;
+//   line-height: 20px;
+//   margin-right: 10px;
+// }
+
+// .topic-image {
+//   margin: 50px;
+// }
+
+// .sidedrawer-toggle:hover {
+//   color: #fff;
+//   text-decoration: none;
+// }
+
+// #sidedrawer .username {
+//   height: 50px;
+//   padding-top: 0;
+// }
 
 
 // search-bar
 
 .search-bar-container {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 64px;
+  // position: absolute;
+  // right: 0;
+  // left: 0;
+  // top: 64px;
 }
 
 .search-bar {
@@ -204,41 +257,39 @@ body {
   }
 }
 
-.mui-divider {
-  ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 451px;
+// .mui-divider {
+//   ul {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     height: 451px;
 
-    li {
-      margin: 10px;
-      border-bottom: 1px solid #e4dede;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      padding-bottom: 8px;
-
-
-      a{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &:hover{
-          text-decoration: none;
-        }
-        span{
-          margin: 4px;
-        }
-      }
-    }
-  }
-}
+//     li {
+//       margin: 10px;
+//       border-bottom: 1px solid #e4dede;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       width: 100%;
+//       height: 100%;
+//       padding-bottom: 8px;
 
 
+//       a{
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         &:hover{
+//           text-decoration: none;
+//         }
+//         span{
+//           margin: 4px;
+//         }
+//       }
+//     }
+//   }
+// }
 .expand-header {
   width: 100%;
   height: 248px;
