--- a/src/views/auth.pug
+++ b/src/views/auth.pug
@@ -1,61 +1,86 @@
 extends layouts/main
 
 block layout
+  
   .mdl-layout.mdl-js-layout
-    section.container
-      #cube.show-front
-        figure.front
-          .mdl-card.mdl-shadow--6dp
-            .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
-              h2.mdl-card__title-text Simple Login
-            .mdl-card__supporting-text
-              .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-                input#login.mdl-textfield__input
-                label.mdl-textfield__label(for='login') Login
-              .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-                input#password.mdl-textfield__input(type='password')
-                label.mdl-textfield__label(for='password') Password
-            .mdl-card__actions.mdl-card--border
-              .mdl-grid
-                button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
-                  | Login
-              .mdl-grid
-                .mdl-cell.mdl-cell--12-col
-                  a.mdl-color-text--primary(onclick='flip("show-left")') Sign up!
-                  a.mdl-color-text--primary(onclick='flip("show-bottom")' style='float: right')
-                    | Lost
-                    | Password?
-        figure.left
-          .mdl-card.mdl-shadow--6dp
-            .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
-              a.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon(onclick='flip("show-front")')
-                i.material-icons arrow_back
-              h2.mdl-card__title-text Sign up
-            .mdl-card__supporting-text
-              .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-                input#login.mdl-textfield__input
-                label.mdl-textfield__label(for='login') Login
-              .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-                input#password.mdl-textfield__input(type='password')
-                label.mdl-textfield__label(for='password') Password
-              .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-                input#password2.mdl-textfield__input(type='password')
-                label.mdl-textfield__label(for='password2') Password repeat
-            .mdl-card__actions.mdl-card--border
-              .mdl-grid
-                button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
-                  | Sign up
-        figure.bottom
-          .mdl-card.mdl-shadow--6dp
-            .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
-              a.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon(onclick='flip("show-front")')
-                i.material-icons arrow_back
-              h2.mdl-card__title-text Lost Password
-            .mdl-card__supporting-text
-              .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-                input#email.mdl-textfield__input(type='email')
-                label.mdl-textfield__label(for='email') E-Mail
-            .mdl-card__actions.mdl-card--border
-              .mdl-grid
-                button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
-                  | Reset Password
+  #login-conatiner.mdl-card.mdl-shadow--16dp
+    .mdl-card__supporting-text
+      #login-fab.mdl-color--accent.mdl-color-text--white
+        i#lock-icon.material-icons lock
+      #card-heading
+        | User Login
+      .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+        input#username.mdl-textfield__input
+        label.mdl-textfield__label(for='username') username
+      .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+        input#email.mdl-textfield__input
+        label.mdl-textfield__label(for='email') Email
+      .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+        input#password.mdl-textfield__input(type='password')
+        label.mdl-textfield__label(for='password') Password
+      button#login-button.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--colored.mdl-color-text--white
+        | Login
+    .mdl-card__actions
+      button.mdl-button.mdl-js-button.mdl-button--primary Register
+      button#forgotpassword.mdl-button.mdl-js-button.mdl-button--primary Forgot Password
+
+  
+  //- .mdl-layout.mdl-js-layout
+  //-   section.container
+  //-     #cube.show-front
+  //-       figure.front
+  //-         .mdl-card.mdl-shadow--6dp
+  //-           .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
+  //-             h2.mdl-card__title-text Simple Login
+  //-           .mdl-card__supporting-text
+  //-             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+  //-               input#login.mdl-textfield__input
+  //-               label.mdl-textfield__label(for='login') Login
+  //-             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+  //-               input#password.mdl-textfield__input(type='password')
+  //-               label.mdl-textfield__label(for='password') Password
+  //-           .mdl-card__actions.mdl-card--border
+  //-             .mdl-grid
+  //-               button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
+  //-                 | Login
+  //-             .mdl-grid
+  //-               .mdl-cell.mdl-cell--12-col
+  //-                 a.mdl-color-text--primary(onclick='flip("show-left")') Sign up!
+  //-                 a.mdl-color-text--primary(onclick='flip("show-bottom")' style='float: right')
+  //-                   | Lost
+  //-                   | Password?
+  //-       figure.left
+  //-         .mdl-card.mdl-shadow--6dp
+  //-           .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
+  //-             a.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon(onclick='flip("show-front")')
+  //-               i.material-icons arrow_back
+  //-             h2.mdl-card__title-text Sign up
+  //-           .mdl-card__supporting-text
+  //-             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+  //-               input#login.mdl-textfield__input
+  //-               label.mdl-textfield__label(for='login') Login
+  //-             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+  //-               input#password.mdl-textfield__input(type='password')
+  //-               label.mdl-textfield__label(for='password') Password
+  //-             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+  //-               input#password2.mdl-textfield__input(type='password')
+  //-               label.mdl-textfield__label(for='password2') Password repeat
+  //-           .mdl-card__actions.mdl-card--border
+  //-             .mdl-grid
+  //-               button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
+  //-                 | Sign up
+  //-       figure.bottom
+  //-         .mdl-card.mdl-shadow--6dp
+  //-           .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
+  //-             a.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon(onclick='flip("show-front")')
+  //-               i.material-icons arrow_back
+  //-             h2.mdl-card__title-text Lost Password
+  //-           .mdl-card__supporting-text
+  //-             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+  //-               input#email.mdl-textfield__input(type='email')
+  //-               label.mdl-textfield__label(for='email') E-Mail
+  //-           .mdl-card__actions.mdl-card--border
+  //-             .mdl-grid
+  //-               button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
+  //-                 | Reset Password
+
