--- a/src/styles/components/pack-card.scss
+++ b/src/styles/components/pack-card.scss
@@ -1,8 +1,8 @@
 .pack-card {
   border-radius: 18px;
-  // background-color: #f1f6f0;
-  margin: 20px;
-  width: 138px;
+  background-color: currentColor;
+  // margin: 20px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -28,15 +28,21 @@
     transition: opacity .2s cubic-bezier(.4, 0, .6, 1);
   }
   &:hover, &:active {
+    // border: 1px solid currentColor;
+
     &:before {
       opacity: 0.24;
+      // border: 1px solid currentColor; box shadow
     }
-    text-decoration: none;
+    // 
+  }
+  &:active {
     transform: scale(0.9);
-    box-shadow: 2px 0px 10px 0px rgb(0 0 0 / 50%);
   }
 }
-
+#allCards{
+  background-color: #fff;
+}
 .pack-card__image {
   width: 50%;
   height: 50%; 
@@ -44,6 +50,9 @@
   margin-bottom: 8px; 
 }
   .pack-card__title {
-    font-weight: 600;
-    font-size: 16px;
+    font-weight: 400;
+    font-size: 14px;
+    // color: invert;
+    filter: invert(60%);
+
   }
