--- a/src/styles/_auth.css
+++ b/src/styles/_auth.css
@@ -1,7 +1,3 @@
-/* body {
-    background-color: #ddd;
-}
-
 .container {
     position: absolute;
     left: 50%;
@@ -60,26 +56,27 @@
     transition: transform .4s;
 }
 
-.mdl-card {
-    width: 330px;
-    height: 375px;
-}
+/*.mdl-card {*/
+/*    width: 330px;*/
+/*    height: 375px;*/
+/*}*/
 
-.mdl-card__title .mdl-button--icon {
-    height: 28px;
-    width: 28px;
-    min-width: 28px;
-}
+/*.mdl-card__title .mdl-button--icon {*/
+/*    height: 28px;*/
+/*    width: 28px;*/
+/*    min-width: 28px;*/
+/*}*/
 
-.mdl-textfield__label {
-    color: rgba(0, 0, 0, 0.5);
-}
+/*.mdl-textfield__label {*/
+/*    color: rgba(0, 0, 0, 0.5);*/
+/*}*/
 
-a:hover {
-    cursor: pointer;
-} */
+/*a:hover {*/
+/*    cursor: pointer;*/
+/*}*/
 
 
+/*
 * {
 	overflow-x: hidden;
 	margin: 0px;
@@ -141,4 +138,4 @@ body {
 
 #forgotpassword{
 	float: right;
-}
+}*/
