--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -1,12 +1,12 @@
-.container {
-    position: absolute;
-    left: 50%;
-    top: 40px;
-    transform: translate(-50%, 0);
-    perspective: 1000px;
-    width: 330px;
-    height: 375px;
-}
+//.container {
+//    position: absolute;
+//    left: 50%;
+//    top: 40px;
+//    transform: translate(-50%, 0);
+//    perspective: 1000px;
+//    width: 330px;
+//    height: 375px;
+//}
 
 #cube {
     width: 100%;
