--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -3,6 +3,7 @@ extends main
 block layout
   .mdl-layout.mdl-js-layout.mdl-layout--fixed-drawer.mdl-layout--fixed-header
     include ../partials/header
+    #sub-header
     include ../partials/left-sidebar
 
     main.mdl-layout__content
