--- a/src/views/partials/left-sidebar.pug
+++ b/src/views/partials/left-sidebar.pug
@@ -3,25 +3,25 @@
     img(src='~images/apple-store.png' alt='apple store')
     //- Navigation
   nav.mdl-navigation.mdl-list
-    a(class="mdl-navigation__link" href="/account.html") 
+    a(class="mdl-navigation__link" href="account.html")
       i.material-icons.mdl-list__item-icon account_circle
       |  Account
-    a(class="mdl-navigation__link" href="/plans.html") 
+    a(class="mdl-navigation__link" href="plans.html")
       i.material-icons.mdl-list__item-icon local_atm
       |  Plans
-    a(class="mdl-navigation__link" href="/subscriptions.html") 
+    a(class="mdl-navigation__link" href="subscriptions.html")
       i.material-icons.mdl-list__item-icon subscriptions
       |  Subscriptions
-    a(class="mdl-navigation__link" href="/feedback.html") 
+    a(class="mdl-navigation__link" href="feedback.html")
       i.material-icons.mdl-list__item-icon send
       |  feedback
-    a(class="mdl-navigation__link" href="/about.html") 
+    a(class="mdl-navigation__link" href="about.html")
       i.material-icons.mdl-list__item-icon info
       |  About
-    a(href='/#' class="mdl-list__item")
+    a(href='#' class="mdl-list__item")
       img(src='~images/google-play.png' alt='apple store')
 
-    a(href='/#' class="mdl-list__item")
+    a(href='#' class="mdl-list__item")
       img(src='~images/apple-store.png' alt='apple store')
 
     .mdl-list__item.copy-right
