--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -4,6 +4,6 @@ header.mdl-layout__header
     .mdl-layout-spacer
     //- Navigation
     nav.mdl-navigation
-      a(class="mdl-navigation__link" href="/packs.html") All Packs
-      a(class="mdl-navigation__link" href="/free-sentences.html") Free Sentences
+      a(class="mdl-navigation__link" href="packs.html") All Packs
+      a(class="mdl-navigation__link" href="free-sentences.html") Free Sentences
       a(class="mdl-navigation__link" href="javascript:void(0);") Logout
