--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import "~material-design-lite/material.min.css";
 
 @import 'components/pack-card.scss';
+@import 'components/_card.scss';
+@import 'components/_plan-container.scss';
 
 @import "auth";
 
