--- a/src/views/account.pug
+++ b/src/views/account.pug
@@ -1,49 +1,49 @@
 extends layouts/app
 
+block page-title
+  | User Profile
+
+
 block content
   .mdl-grid
-    .mdl-cell.mdl-cell--4-offset
-      .mdl-card.mdl-shadow--2dp
-        .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
-          h2.mdl-card__title-text User Profile
+    .mdl-cell--8-col
+      .mdl-card.mdl-shadow--2dp.mdl-card--unset-width
         .mdl-card__supporting-text
-          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-            input#email.mdl-textfield__input
-            label.mdl-textfield__label(for='email') Email
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.mdl-textfield--full-width
+              input#email.mdl-textfield__input
+              label.mdl-textfield__label(for='email') Email
 
-          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-            input#username.mdl-textfield__input
-            label.mdl-textfield__label(for='username') Username
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.mdl-textfield--full-width
+              input#username.mdl-textfield__input
+              label.mdl-textfield__label(for='username') Username
 
-          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.mdl-textfield--full-width
             input#password.mdl-textfield__input
             label.mdl-textfield__label(for='password') Password
-
-          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+          .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.mdl-textfield--full-width
             input#confirm-password.mdl-textfield__input
             label.mdl-textfield__label(for='confirm-password') Confirm Password
           p Languages
-          li.mdl-list__item
-            span.mdl-list__item-primary-content
-              | Arabic
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-1')
-                input#list-option-1.mdl-radio__button(type='radio' name='options' value='1' checked='')
-          li.mdl-list__item
-            span.mdl-list__item-primary-content
-              | English
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-2')
-                input#list-option-2.mdl-radio__button(type='radio' name='options' value='2' checked='')
-          li.mdl-list__item
-            span.mdl-list__item-primary-content
-              | French
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-3')
-                input#list-option-3.mdl-radio__button(type='radio' name='options' value='3' checked='')
+          ul.mdl-list
+            li.mdl-list__item
+              span.mdl-list__item-primary-content
+                | Arabic
+              span.mdl-list__item-secondary-action
+                label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-1')
+                  input#list-option-1.mdl-radio__button(type='radio' name='options' value='1' checked='')
+            li.mdl-list__item
+              span.mdl-list__item-primary-content
+                | English
+              span.mdl-list__item-secondary-action
+                label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-2')
+                  input#list-option-2.mdl-radio__button(type='radio' name='options' value='2' checked='')
+            li.mdl-list__item
+              span.mdl-list__item-primary-content
+                | French
+              span.mdl-list__item-secondary-action
+                label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-3')
+                  input#list-option-3.mdl-radio__button(type='radio' name='options' value='3' checked='')
 
-        .mdl-card__actions.mdl-card--border
-          .mdl-grid
-            button.mdl-cell.mdl-cell--12-col.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
-              | Submit
+            button.mdl-button.mdl-button--raised.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect.mdl-color-text--white
+                | Submit
 
