--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -3,6 +3,8 @@ extends main
 block layout
   .mdl-layout.mdl-js-layout.mdl-layout--fixed-drawer.mdl-layout--fixed-header
     include ../partials/header
+      block page-title
+
     #sub-header
     include ../partials/left-sidebar
 
