--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,9 +1,9 @@
 header.mdl-layout__header
   .mdl-layout__header-row
-    //- Add spacer, to align navigation to the right
-    .mdl-layout-spacer
-    //- Navigation
+    //- Title
+    .mdl-layout-title
+      block page-title
+
     nav.mdl-navigation
       a(class="mdl-navigation__link" href="packs.html") All Packs
       a(class="mdl-navigation__link" href="free-sentences.html") Free Sentences
-      a(class="mdl-navigation__link" href="javascript:void(0);") Logout
