--- a/src/views/partials/left-sidebar.pug
+++ b/src/views/partials/left-sidebar.pug
@@ -6,18 +6,23 @@
     a(class="mdl-navigation__link" href="account.html")
       i.material-icons.mdl-list__item-icon account_circle
       |  Account
-    a(class="mdl-navigation__link" href="plans.html")
-      i.material-icons.mdl-list__item-icon local_atm
-      |  Plans
     a(class="mdl-navigation__link" href="subscriptions.html")
       i.material-icons.mdl-list__item-icon subscriptions
       |  Subscriptions
+
+    .mdl-menu__item--full-bleed-divider
     a(class="mdl-navigation__link" href="feedback.html")
       i.material-icons.mdl-list__item-icon send
       |  feedback
     a(class="mdl-navigation__link" href="about.html")
       i.material-icons.mdl-list__item-icon info
       |  About
+
+    .mdl-menu__item--full-bleed-divider
+    a(class="mdl-navigation__link" href="#")
+      i.material-icons.mdl-list__item-icon logout
+      | Logout
+
     a(href='#' class="mdl-list__item")
       img(src='~images/google-play.png' alt='apple store')
 
