--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import 'components/pack-card.scss';
 @import 'components/_card.scss';
 @import 'components/_plan-container.scss';
+@import 'components/right-sidebar.scss';
 
 @import "auth";
 
@@ -45,11 +46,13 @@ body {
   img {
     width: 60%;
   }
-  .kalami-logo{
+
+  .kalami-logo {
     width: 100%;
   }
 }
-.mdl-navigation__link .material-icons{
+
+.mdl-navigation__link .material-icons {
   margin-right: 15px;
 }
 
@@ -57,6 +60,7 @@ body {
   justify-content: center;
   cursor: pointer;
 }
+
 .demo-list-icon {
   width: 240px;
 }
@@ -65,7 +69,7 @@ body {
   position: absolute;
   bottom: 0;
 
-  .sidebar-footer__download{
+  .sidebar-footer__download {
     padding: 4px;
   }
 }
@@ -166,4 +170,15 @@ body {
       margin: 10px 0;
     }
   }
+}
+
+// right side bar 
+.right-sidebar-container {
+  height: 100%;
+  // // background-color: #ede7e7;
+  // right: 8px;
+  // top: 252px;
+  // position: fixed;
+  // width: 18%;
+  // display: none;
 }
