--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
 @import "~material-design-lite/material.min.css";
 
-@import 'components/pack-card.scss';
+@import 'components/pack-card';
 @import 'components/_card.scss';
 @import 'components/_plan-container.scss';
-@import 'components/right-sidebar.scss';
+@import 'components/right-sidebar';
 
 @import "auth";
 
