--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -11,3 +11,6 @@ block layout
     main.mdl-layout__content
       .page-content
         block content
+
+  include ../partials/right-sidebar
+  #overlay.mdl-layout__obfuscator
