--- a/src/views/partials/right-sidebar.pug
+++ b/src/views/partials/right-sidebar.pug
@@ -1,34 +1,36 @@
 #right-sidebar.right-sidebar
-  .sidebar-top
-    button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored
-      i.material-icons star_border
-    img(src='~images/girl.png' alt='image' class="sidebar-top__image")
-    button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored
-      i.material-icons autorenew
+	.sidebar-top
+		button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--colored.right-sidebar__arrow
+			i.material-icons arrow_back
+		button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored
+			i.material-icons star_border
+		img(src='~images/girl.png' alt='image' class="sidebar-top__image")
+		button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored
+			i.material-icons autorenew
 
-  .sidebar-mid
-    .sidebar-mid__title Help
-    .sidebar-mid__subTitle Conversation
+	.sidebar-mid
+		.sidebar-mid__title Help
+		.sidebar-mid__subTitle Conversation
 
 
-  .sidebar-bottom
-    ul.demo-list-icon.mdl-list
-      li.mdl-list__item
-        span.mdl-list__item-primary-content
-          i.material-icons.mdl-list__item-icon insert_emoticon
-          |     Help me.
-      li.mdl-list__item
-        span.mdl-list__item-primary-content
-          i.material-icons.mdl-list__item-icon insert_emoticon
-          |     can you help me
-      li.mdl-list__item
-        span.mdl-list__item-primary-content
-          i.material-icons.mdl-list__item-icon insert_emoticon
-          |     I need help
-      li.mdl-list__item
-        span.mdl-list__item-primary-content
-          i.material-icons.mdl-list__item-icon insert_emoticon
-          |     Do you need help
+	.sidebar-bottom
+		ul.demo-list-icon.mdl-list
+			li.mdl-list__item
+				span.mdl-list__item-primary-content
+					img(src="~images/emoji.png" alt="emoji" class="emoji")
+					|     Help me.
+			li.mdl-list__item
+				span.mdl-list__item-primary-content
+					img(src="~images/emoji.png" alt="emoji" class="emoji")
+					|     can you help me
+			li.mdl-list__item
+				span.mdl-list__item-primary-content
+					img(src="~images/emoji.png" alt="emoji" class="emoji")
+					|     I need help
+			li.mdl-list__item
+				span.mdl-list__item-primary-content
+					img(src="~images/emoji.png" alt="emoji" class="emoji")
+					|     Do you need help
 
 //
 //.demo-layout-transparent.mdl-layout.mdl-js-layout
