--- a/src/styles/components/_pack-card.scss
+++ b/src/styles/components/_pack-card.scss
@@ -52,6 +52,7 @@
   .pack-card__title {
     font-weight: 400;
     font-size: 14px;
+    margin: 0;
     // color: invert;
     filter: invert(60%);
 
