--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,4 +1,4 @@
-header.mdl-layout__header
+header.mdl-layout__header.header-change-color
   .mdl-layout__header-row
     //- Title
     .mdl-layout-title
