--- a/src/views/free-sentences.pug
+++ b/src/views/free-sentences.pug
@@ -2,8 +2,8 @@ extends layouts/app
 include ./mixins/pack-card
 
 block page-title
-  | All Packs
+  | Sentence Composition
 
 block content
-  .mdl-grid#allCards
+  .mdl-grid#sentence-composition
 
