--- a/src/views/mixins/pack-card.pug
+++ b/src/views/mixins/pack-card.pug
@@ -1,4 +1,4 @@
 mixin pack-card
 	a(href='#' class="pack-card")
 		img(src='../images/girl.png' alt='image' class="pack-card__image")
-		.pack-card__title Sister
+		.pack-card__title.mdl-typography--font-bold Sister
