--- a/src/views/partials/right-sidebar.pug
+++ b/src/views/partials/right-sidebar.pug
@@ -1,6 +1,6 @@
 #right-sidebar.right-sidebar
 	.sidebar-top
-		button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--colored.right-sidebar__arrow
+		button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored.right-sidebar__arrow
 			i.material-icons arrow_back
 		button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored
 			i.material-icons star_border
@@ -12,6 +12,7 @@
 		.sidebar-mid__title Help
 		.sidebar-mid__subTitle Conversation
 
+	.mdl-menu__item--full-bleed-divider
 
 	.sidebar-bottom
 		ul.demo-list-icon.mdl-list
