--- a/src/views/partials/right-sidebar.pug
+++ b/src/views/partials/right-sidebar.pug
@@ -15,7 +15,7 @@
 
 	.sidebar-bottom
 		ul.demo-list-icon.mdl-list
-			li.mdl-list__item
+			li.mdl-list__item.mdl-js-ripple-effect
 				span.mdl-list__item-primary-content
 					img(src="~images/emoji.png" alt="emoji" class="emoji")
 					|     Help me.
