--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -8,9 +8,9 @@ block layout
     #sub-header
     include ../partials/left-sidebar
 
-    main.mdl-layout__content
-      .page-content
-        block content
+    //- main.mdl-layout__content
+    .page-content
+      block content
 
     include ../partials/right-sidebar
     #overlay.mdl-layout__obfuscator
